Bug 125333 - Crash on repeated searches with FindReplaceRememberedSearches=0
Summary: Crash on repeated searches with FindReplaceRememberedSearches=0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-05-17 09:05 UTC by Heiko Tietze
Modified: 2019-06-04 09:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2019-05-17 09:05:30 UTC
Search advanced options for FindReplaceRememberedSearches and set it to 0. Enter some dummy text and replace per Find & Replace. Second call crashes the app (not entirely sure it's related to this option).

Introduced at bug 122322 with https://gerrit.libreoffice.org/plugins/gitiles/core/+/70e22d4996e71e019f62743893f041797f050361%5E%21
Comment 1 Heiko Tietze 2019-05-17 10:10:30 UTC
https://gerrit.libreoffice.org/#/c/72459/
Comment 2 Commit Notification 2019-06-04 08:07:13 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/def76a088dea12dfd9d9b796e975e742cbe44ce1%5E%21

Resolves tdf#125333 - Crash with FindReplaceRememberedSearches=0

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-06-04 09:01:27 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/5cfac16dbd4af456a7fb6d52c8953c69a72ba2ba%5E%21

Resolves tdf#125333 - Crash with FindReplaceRememberedSearches=0

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.