Resolves tdf#125333 - Crash with FindReplaceRememberedSearches=0

Zero remembered searches crash the app when no result is found
minimum set to 1

Change-Id: Ib2b4b195d018f0f11238699458066f4d128f8997
Reviewed-on: https://gerrit.libreoffice.org/72459
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>